info/03-freedriving_testdone/RemoteApi/include/DianaAPI.h

DIANA_API int enterForceMode_ex(/*IN[3]*/ double *dblForceDirection, /*[IN]*/ double dblForceValue,
                                /*[IN]*/ double dblMaxApproachVelocity, /*[IN]*/ double dblMaxAllowTcpOffset,
                                /*IN[6]*/ double *dblActiveTcp = nullptr, /*IN*/ const char *strIpAddress = "");
DIANA_API int readDI(/*IN*/ const char *groupName, /*IN*/ const char *IOName, /*OUT*/ int &value,
                     /*IN*/ const char *strIpAddress = "");
DIANA_API int readAI(/*IN*/ const char *groupName, /*IN*/ const char *IOName, /*OUT*/ int &mode, /*OUT*/ double &value,
                     /*IN*/ const char *strIpAddress = "");
DIANA_API int setAIMode(/*IN*/ const char *groupName, /*IN*/ const char *IOName, /*IN*/ int mode,
                        /*IN*/ const char *strIpAddress = "");
DIANA_API int writeDO(/*IN*/ const char *groupName, /*IN*/ const char *IOName, /*IN*/ int value,
                      /*IN*/ const char *strIpAddress = "");
DIANA_API int writeAO(/*IN*/ const char *groupName, /*IN*/ const char *IOName, /*IN*/ int mode, /*IN*/ double value,
                      /*IN*/ const char *strIpAddress = "");
DIANA_API int readBusCurrent(/*OUT*/ double &current, /*IN*/ const char *strIpAddress = "");
DIANA_API int readBusVoltage(/*OUT*/ double &voltage, /*IN*/ const char *strIpAddress = "");
/*************************************** version 1.1***************************************/

DIANA_API int getDH(/*OUT[7]*/ double *aDH, /*OUT[7]*/ double *alphaDH, /*OUT[7]*/ double *dDH,
                    /*OUT[7]*/ double *thetaDH, /*IN*/ const char *strIpAddress = "");
DIANA_API int getOriginalJointTorque(/*OUT[7]*/ double *torques, /*IN*/ const char *strIpAddress = "");
DIANA_API int getJacobiMatrix(/*OUT[42]*/ double *matrix_jacobi, /*IN*/ const char *strIpAddress = "");
/*************************************** version 1.2***************************************/

DIANA_API int resetDH(const char *strIpAddress = "");
/*************************************** version 1.3***************************************/

DIANA_API int runProgram(const char *programName, /*IN*/ const char *strIpAddress = "");
DIANA_API int stopProgram(const char *programName, /*IN*/ const char *strIpAddress = "");
DIANA_API int getVariableValue(const char *variableName, double &value, /*IN*/ const char *strIpAddress = "");
DIANA_API int setVariableValue(const char *variableName, const double &value, /*IN*/ const char *strIpAddress = "");
DIANA_API int isTaskRunning(const char *variableName, /*IN*/ const char *strIpAddress = "");
DIANA_API int pauseProgram(const char *strIpAddress = "");
DIANA_API int resumeProgram(const char *strIpAddress = "");
DIANA_API int stopAllProgram(const char *strIpAddress = "");
DIANA_API int isAnyTaskRunning(const char *strIpAddress = "");
/*************************************** version 1.4***************************************/

DIANA_API int cleanErrorInfo(const char *strIpAddress = "");
DIANA_API int setCollisionLevel(int level, /*IN*/ const char *strIpAddress = "");
/*************************************** version 1.6***************************************/
DIANA_API int zeroSpaceManualMove(/*IN*/ int direction, /*IN[7 or 6]*/ double *dblJointsVel,
                                  /*IN[7 or 6]*/ double *dblJointAcc, /*IN*/ const char *strIpAddress = "");
/*****************************************
 * function name: getHomingState
 * -1: get state failed
 *  0: home position
 *  1: running
 *  2: homing stop with error
 *  3: not at home position = need homing
 * **************************************/
DIANA_API int getHomingState(const char *strIpAddress = "");
DIANA_API int startHoming(const char *strIpAddress = "");
DIANA_API int updateForce(/*[IN]*/ double dblForceValue, const char *strIpAddress = "");
/*************************************** version 1.7***************************************/

DIANA_API int getCartImpedanceCoordinateType(const char *strIpAddress = "");
DIANA_API int setCartImpedanceCoordinateType(const int intCoordinateType, const char *strIpAddress = "");