info/03-freedriving_testdone/RemoteApi/lib/DianaApi.py


def enterForceMode_ex(forceDirection,forceValue,maxApproachVelocity,maxAllowTcpOffset,active_tcp, ipAddress = ''):
    arr_ForceDirection = DIANA_FORCE_DIRECTION()
    arr_ForceDirection.values = (c_double*3)()
    for index in range(0, len(arr_ForceDirection.values)):
        arr_ForceDirection.values[index] = forceDirection[index]
    ret = 0
    if active_tcp==None:
        use_active_tcp = c_void_p(0)
        api_mod.enterForceMode_ex.restype = c_int
        api_mod.enterForceMode_ex.argtypes = [POINTER(
            DIANA_FORCE_DIRECTION), c_double, c_double, c_double, c_void_p, c_char_p]
        ret = api_mod.enterForceMode_ex(byref(
            arr_ForceDirection), forceValue, maxApproachVelocity, maxAllowTcpOffset, use_active_tcp, bytes(ipAddress.encode('utf-8')))
    else:
        arr_Active_Tcp = DIANA_ACTIVE_TCP()
        arr_Active_Tcp.values = (c_double*6)()
        for index in range(0, len(arr_Active_Tcp.values)):
            arr_Active_Tcp.values[index] = active_tcp[index]
        api_mod.enterForceMode_ex.restype = c_int
        api_mod.enterForceMode_ex.argtypes = [POINTER(
            DIANA_FORCE_DIRECTION), c_double, c_double, c_double, POINTER(DIANA_ACTIVE_TCP), c_char_p]
        ret = api_mod.enterForceMode_ex(byref(
            arr_ForceDirection), forceValue, maxApproachVelocity, maxAllowTcpOffset, byref(arr_Active_Tcp), bytes(ipAddress.encode('utf-8')))
    return message(ret)

def readDI(group_name, di_name, ipAddress = ''):
    DIValue = c_int()
    api_mod.readDI.argtypes = [c_char_p, c_char_p, POINTER(c_int), c_char_p]
    api_mod.readDI.restype = c_int
    ret = api_mod.readDI(bytes(group_name, encoding = 'utf-8'), bytes(di_name, encoding = 'utf-8'), byref(DIValue), bytes(ipAddress.encode('utf-8')))
    return ret, DIValue

def readAI(group_name, di_name, ipAddress = ''):
    AIValue = c_double()
    AIMode = c_int()
    api_mod.readAI.argtypes = [c_char_p, c_char_p, POINTER(c_int),POINTER(c_double), c_char_p]
    api_mod.readAI.restype = c_int
    ret = api_mod.readAI(bytes(group_name, encoding = 'utf-8'), bytes(di_name, encoding = 'utf-8'), byref(AIMode),byref(AIValue), bytes(ipAddress.encode('utf-8')))
    return ret, AIMode, AIValue

def setAIMode(group_name, di_name,mode, ipAddress = ''):
    api_mod.setAIMode.argtypes = [c_char_p, c_char_p, c_int, c_char_p]
    api_mod.setAIMode.restype = c_int
    ret = api_mod.setAIMode(bytes(group_name, encoding = 'utf-8'), bytes(di_name, encoding = 'utf-8'),mode, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def writeDO(group_name, di_name,value, ipAddress = ''):
    api_mod.writeDO.argtypes = [c_char_p, c_char_p, c_int, c_char_p]
    api_mod.writeDO.restype = c_int
    ret = api_mod.writeDO(bytes(group_name, encoding = 'utf-8'), bytes(di_name, encoding = 'utf-8'),value, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def writeAO(group_name, di_name,mode,value, ipAddress = ''):
    api_mod.writeAO.argtypes = [c_char_p, c_char_p, c_int, c_double, c_char_p]
    api_mod.writeAO.restype = c_int
    ret = api_mod.writeAO(bytes(group_name, encoding = 'utf-8'), bytes(di_name, encoding = 'utf-8'),mode,value, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def readBusCurrent(ipAddress = ''):
    Current = c_double()
    api_mod.readBusCurrent.argtypes = [POINTER(c_double), c_char_p]
    api_mod.readBusCurrent.restype = c_int
    ret = api_mod.readBusCurrent(byref(Current), bytes(ipAddress.encode('utf-8')))
    return ret, Current

def readBusVoltage(ipAddress = ''):
    Voltage = c_double()
    api_mod.readBusVoltage.argtypes = [POINTER(c_double), c_char_p]
    api_mod.readBusVoltage.restype = c_int
    ret = api_mod.readBusVoltage(byref(Voltage), bytes(ipAddress.encode('utf-8')))
    return ret, Voltage

def getDH(aDH,alphaDH,dDH,thetaDH, ipAddress = ''):
    arr_aDH = DIANA_DH_A()
    arr_aDH.values = (c_double*7)()
    arr_alphaDH = DIANA_DH_Alpha()
    arr_alphaDH.values = (c_double*7)()
    arr_dDH = DIANA_DH_D()
    arr_dDH.values = (c_double*7)()
    arr_thetaDH = DIANA_DH_Theta()
    arr_thetaDH.values = (c_double*7)()
    api_mod.getDH.restype = c_int
    api_mod.getDH.argtypes = [ POINTER(DIANA_DH_A), 
        POINTER(DIANA_DH_Alpha),POINTER(DIANA_DH_D), POINTER(DIANA_DH_Theta), c_char_p]
    ret = api_mod.getDH(byref(arr_aDH),byref(arr_alphaDH),byref(arr_dDH),byref(arr_thetaDH), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(aDH)):
       aDH[index] = arr_aDH.values[index]
    for index in range(0, len(alphaDH)):
       alphaDH[index] = arr_alphaDH.values[index]
    for index in range(0, len(dDH)):
       dDH[index] = arr_dDH.values[index]
    for index in range(0, len(thetaDH)):
       thetaDH[index] = arr_thetaDH.values[index]
    return message(ret)

def getOriginalJointTorque(torques, ipAddress = ''):
    jointTorque = DIANA_JOINT_TORQUE()
    jointTorque.values = (c_double*7)()
    api_mod.getOriginalJointTorque.restype = c_int
    api_mod.getOriginalJointTorque.argtypes = [ POINTER(DIANA_JOINT_TORQUE), c_char_p]
    ret = api_mod.getOriginalJointTorque(byref(jointTorque), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(torques)):
       torques[index] = jointTorque.values[index]
    return message(ret)

def getJacobiMatrix(matrix_jacobi, ipAddress = ''):
    jacobi_matrix = DIANA_JACOBI_MATRIX()
    jacobi_matrix.values = (c_double*42)()
    api_mod.getJacobiMatrix.restype = c_int
    api_mod.getJacobiMatrix.argtypes = [ POINTER(DIANA_JACOBI_MATRIX), c_char_p]
    ret = api_mod.getJacobiMatrix(byref(jacobi_matrix), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(matrix_jacobi)):
       matrix_jacobi[index] = jacobi_matrix.values[index]
    return message(ret)

def resetDH(ipAddress = ''):
    api_mod.resetDH.argtypes = [c_char_p]
    api_mod.resetDH.restype = c_int
    ret = api_mod.resetDH(bytes(ipAddress.encode('utf-8')))
    return message(ret)

def runProgram(name, ipAddress = ''):
    api_mod.runProgram.argtypes = [c_char_p, c_char_p]
    api_mod.runProgram.restype = c_int
    ret = api_mod.runProgram(bytes(name, encoding = 'utf-8'), bytes(ipAddress.encode('utf-8')))
    return message(ret)

def stopProgram(name, ipAddress = ''):
    api_mod.stopProgram.argtypes = [c_char_p, c_char_p]
    api_mod.stopProgram.restype = c_int
    ret = api_mod.stopProgram(bytes(name, encoding = 'utf-8'), bytes(ipAddress.encode('utf-8')))
    return message(ret)

def getVariableValue(name,ipAddress = ''):
    api_mod.getVariableValue.argtypes = [c_char_p, POINTER(c_double), c_char_p]
    api_mod.getVariableValue.restype = c_int
    value = c_double()
    ret = api_mod.getVariableValue(
        bytes(name, encoding="utf-8"), byref(value), bytes(ipAddress.encode('utf-8')))
    return message(ret), value.value
	

def setVariableValue(name,value, ipAddress = ''):
    api_mod.setVariableValue.argtypes = [c_char_p, POINTER(c_double), c_char_p]
    api_mod.setVariableValue.restype = c_int
    value_d = c_double(0)
    value_d.value = value
    ret = api_mod.setVariableValue(bytes(name, encoding = 'utf-8'),byref(value_d), bytes(ipAddress.encode('utf-8')))
    return message(ret)

def isTaskRunning(name, ipAddress = ''):
    api_mod.isTaskRunning.argtypes = [c_char_p, c_char_p]
    api_mod.isTaskRunning.restype = c_int
    ret = api_mod.isTaskRunning(bytes(name, encoding = 'utf-8'), bytes(ipAddress.encode('utf-8')))
    if(ret == -1):
        return False
    else:
        return message(ret)

def pauseProgram(ipAddress = ''):
    api_mod.pauseProgram.argtypes = [c_char_p]
    api_mod.pauseProgram.restype = c_int
    ret = api_mod.pauseProgram(bytes(ipAddress.encode('utf-8')))
    return message(ret)

def resumeProgram(ipAddress = ''):
    api_mod.resumeProgram.argtypes = [c_char_p]
    api_mod.resumeProgram.restype = c_int
    ret = api_mod.resumeProgram(bytes(ipAddress.encode('utf-8')))
    return message(ret)

def stopAllProgram(ipAddress = ''):
    api_mod.stopAllProgram.argtypes = [c_char_p]
    api_mod.stopAllProgram.restype = c_int
    ret = api_mod.stopAllProgram(bytes(ipAddress.encode('utf-8')))
    if(ret == -1):
        return False
    else:
        return message(ret)

def isAnyTaskRunning(ipAddress = ''):
    api_mod.isAnyTaskRunning.argtypes = [c_char_p]
    api_mod.isAnyTaskRunning.restype = c_int
    ret = api_mod.isAnyTaskRunning(bytes(ipAddress.encode('utf-8')))
    return message(ret)

def cleanErrorInfo(ipAddress = ''):
    api_mod.cleanErrorInfo.argtypes = [c_char_p]
    api_mod.cleanErrorInfo.restype = c_int
    ret = api_mod.cleanErrorInfo(bytes(ipAddress.encode('utf-8')))
    return message(ret)

def setCollisionLevel(level, ipAddress = ''):
    api_mod.setCollisionLevel.argtypes = [c_int, c_char_p]
    api_mod.setCollisionLevel.restype = c_int
    ret = api_mod.setCollisionLevel(level, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def zeroSpaceManualMove(direction, dblJointsVel, dblJointAcc, ipAddress=''):
    if not isinstance(direction, zero_space_move_direction):
        raise TypeError(
            'direction must be an instance of zero_space_move_direction Enum')
    joint_vel = DIANA_JOINT_ANGULAR_VEL()
    joint_vel.values = (c_double*7)()
    for index in range(0, len(dblJointsVel)):
        joint_vel.values[index] = dblJointsVel[index]
    joint_acc = DIANA_JOINT_ACC()
    joint_acc.values = (c_double*7)()
    for index in range(0, len(joint_acc.values)):
        joint_acc.values[index] = dblJointAcc[index]
    api_mod.zeroSpaceManualMove.argtypes = [c_int, POINTER(
        DIANA_JOINT_ANGULAR_VEL), POINTER(DIANA_JOINT_ACC), c_char_p]
    api_mod.zeroSpaceManualMove.restype = c_int
    ret = api_mod.zeroSpaceManualMove(
        direction.value, byref(joint_vel),byref(joint_acc), bytes(ipAddress.encode('utf-8')))
    return message(ret)

def getHomingState(ipAddress = ''):
    api_mod.getHomingState.argtypes = [c_char_p]
    api_mod.getHomingState.restype = c_int
    ret = api_mod.getHomingState(bytes(ipAddress.encode('utf-8')))
    return ret

def startHoming(ipAddress = ''):
    api_mod.startHoming.argtypes = [c_char_p]
    api_mod.startHoming.restype = c_int
    ret = api_mod.startHoming(bytes(ipAddress.encode('utf-8')))
    return message(ret)

def updateForce(forceValue, ipAddress = ''):
    api_mod.updateForce.restype = c_int
    api_mod.updateForce.argtypes = [c_double, c_char_p]
    ret = api_mod.updateForce(forceValue, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def getCartImpedanceCoordinateType(ipAddress = ''):
    api_mod.getCartImpedanceCoordinateType.argtypes = [c_char_p]
    api_mod.getCartImpedanceCoordinateType.restype = c_int
    ret = api_mod.getCartImpedanceCoordinateType(bytes(ipAddress.encode('utf-8')))
    return ret

def setCartImpedanceCoordinateType(intCoordinateType, ipAddress = ''):
    api_mod.setCartImpedanceCoordinateType.argtypes = [c_int, c_char_p]
    api_mod.setCartImpedanceCoordinateType.restype = c_int
    ret = api_mod.setCartImpedanceCoordinateType(intCoordinateType, bytes(ipAddress.encode('utf-8')))
    return ret
